v3.4.2
- Fix bug where elevators are reported as being 1 block smaller than they are in `/elev list`
- Fix bug in recent game versions where Call signs don't trigger redstone update with levers (Appears to be caused by a bug in PaperMC, using a workaround)
- Fix legacy color selector being used interchangeably with ampersand
- Fix bug where changing floors may not work when custom floor name has a different color